--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer
   Localizado em São Paulo.">
-  <title>Lobo - Desenvolvedor e Designer</title>
+  <title>Lobo - Desenvolvedor e UX/UI Designer</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
