--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Desenvolvedor Front End & UX/UI Designer
   Localizado em São Paulo.">
   <title>Lobo - Desenvolvedor e UX/UI Designer</title>
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
